--- a/index.html
+++ b/index.html
@@ -3,83 +3,235 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SOS.University - Empowering Emergency Education</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>SOS.University - AI-Driven Education for Social Impact</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+        }
+        header {
+            background: #4a0e4e;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            background: #610c65;
+            color: white;
+            padding: 10px 0;
+        }
+        nav ul {
+            padding: 0;
+            list-style: none;
+            text-align: center;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 10px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        section {
+            padding: 20px 0;
+            background: white;
+            margin: 20px 0;
+        }
+        h2 {
+            color: #4a0e4e;
+        }
+        .btn {
+            display: inline-block;
+            background: #4a0e4e;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background: #610c65;
+        }
+        footer {
+            background: #4a0e4e;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+        #contact form {
+            display: grid;
+            gap: 10px;
+        }
+        #contact form input, #contact form textarea {
+            width: 100%;
+            padding: 10px;
+        }
+        .feature-box {
+            border: 1px solid #ddd;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .accordion {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            text-align: left;
+            border: none;
+            outline: none;
+            transition: 0.4s;
+        }
+        .active, .accordion:hover {
+            background-color: #ccc;
+        }
+        .panel {
+            padding: 0 18px;
+            background-color: white;
+            display: none;
+            overflow: hidden;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
-    <header class="bg-blue-600 text-white p-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">SOS.University</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="#about" class="hover:underline">About</a></li>
-                    <li><a href="#programs" class="hover:underline">Programs</a></li>
-                    <li><a href="#contact" class="hover:underline">Contact</a></li>
-                </ul>
-            </nav>
+<body>
+    <header>
+        <div class="container">
+            <h1>SOS.University</h1>
+            <p>AI-Driven Education for Social Impact and Innovation</p>
         </div>
     </header>
 
-    <main class="container mx-auto mt-8 p-4">
-        <section id="hero" class="text-center mb-12">
-            <h2 class="text-4xl font-bold mb-4">Emergency Education for All</h2>
-            <p class="text-xl mb-8">SOS.University provides rapid, accessible learning solutions in times of crisis.</p>
-            <a href="#programs" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition duration-300">Explore Our Programs</a>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#impact">Social Impact</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <section id="home">
+            <h2>Welcome to SOS.University</h2>
+            <p>SOS.University is at the forefront of AI-driven education, fostering innovation, and creating social impact. We integrate cutting-edge AI technologies to provide personalized learning experiences and empower the next generation of tech leaders.</p>
+            <a href="#features" class="btn">Explore Our Features</a>
         </section>
 
-        <section id="about" class="mb-12">
-            <h2 class="text-3xl font-bold mb-4">About SOS.University</h2>
-            <p class="mb-4">SOS.University is a cutting-edge platform designed to deliver emergency education services to individuals and communities facing unexpected disruptions. Our mission is to ensure that learning never stops, even in the most challenging circumstances.</p>
-            <p>We leverage technology and innovative teaching methods to provide quick, adaptable, and effective educational solutions.</p>
-        </section>
-
-        <section id="programs" class="mb-12">
-            <h2 class="text-3xl font-bold mb-4">Our Programs</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-xl font-bold mb-2">Rapid Response Courses</h3>
-                    <p>Short, intensive courses designed to quickly impart essential skills and knowledge in emergency situations.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-xl font-bold mb-2">Crisis Management Training</h3>
-                    <p>Specialized programs to equip individuals with the skills needed to navigate and manage crisis scenarios effectively.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-xl font-bold mb-2">Digital Literacy Bootcamps</h3>
-                    <p>Intensive training to ensure everyone has the digital skills necessary in today's rapidly changing world.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow">
-                    <h3 class="text-xl font-bold mb-2">Community Resilience Workshops</h3>
-                    <p>Collaborative learning experiences focused on building stronger, more adaptable communities.</p>
-                </div>
+        <section id="features">
+            <h2>Our Key Features</h2>
+            <div class="feature-box">
+                <h3>AI-Powered Learning</h3>
+                <p>Experience immersive education with our advanced AI infrastructure, including chatbots, AI agents, and large language models. Simplify complex concepts and gain practical, industry-relevant skills.</p>
+            </div>
+            <div class="feature-box">
+                <h3>Entrepreneurship Support</h3>
+                <p>Access mentorship, workshops, and specialized training programs tailored for aspiring entrepreneurs. Learn to leverage AI for innovation and business success.</p>
+            </div>
+            <div class="feature-box">
+                <h3>Social Impact Initiatives</h3>
+                <p>Participate in our technology donation program, partnering with organizations like Rotary Clubs to provide laptops to students in need, bridging the digital divide.</p>
             </div>
         </section>
 
-        <section id="contact" class="mb-12">
-            <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
-            <p class="mb-4">Need emergency educational support? We're here to help.</p>
-            <form class="bg-white p-6 rounded-lg shadow">
-                <div class="mb-4">
-                    <label for="name" class="block mb-2">Name</label>
-                    <input type="text" id="name" name="name" class="w-full p-2 border rounded" required>
-                </div>
-                <div class="mb-4">
-                    <label for="email" class="block mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="w-full p-2 border rounded" required>
-                </div>
-                <div class="mb-4">
-                    <label for="message" class="block mb-2">Message</label>
-                    <textarea id="message" name="message" rows="4" class="w-full p-2 border rounded" required></textarea>
-                </div>
-                <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-full hover:bg-blue-700 transition duration-300">Send Message</button>
+        <section id="about">
+            <h2>About SOS.University</h2>
+            <p>SOS.University is dedicated to revolutionizing education through AI technology and fostering social good. Our platform:</p>
+            <ul>
+                <li><strong>Integrates AI:</strong> Utilizes chatbots, AI agents, and language models for personalized learning.</li>
+                <li><strong>Promotes Practical Skills:</strong> Focuses on applying AI to real-world scenarios across industries.</li>
+                <li><strong>Encourages Innovation:</strong> Supports students and entrepreneurs in harnessing AI for social impact.</li>
+                <li><strong>Bridges the Digital Divide:</strong> Coordinates technology donations to ensure equal access to education.</li>
+            </ul>
+        </section>
+
+        <section id="impact">
+            <h2>Our Social Impact</h2>
+            <p>At SOS.University, we believe in the power of education to transform lives and communities. Our initiatives include:</p>
+            <ul>
+                <li>Partnering with Rotary Clubs for laptop donations to students in need</li>
+                <li>Providing access to cutting-edge AI education regardless of socioeconomic background</li>
+                <li>Fostering a community of innovators committed to using AI for social good</li>
+                <li>Supporting local and global initiatives that align with our mission of accessible education</li>
+            </ul>
+        </section>
+
+        <section id="faq">
+            <h2>Frequently Asked Questions</h2>
+            <button class="accordion">How does AI enhance the learning experience at SOS.University?</button>
+            <div class="panel">
+                <p>Our AI-powered platform uses chatbots, AI agents, and large language models to provide personalized learning paths, instant feedback, and interactive problem-solving experiences. This technology helps break down complex concepts and allows students to apply AI in practical, real-world scenarios.</p>
+            </div>
+
+            <button class="accordion">Can I participate in the technology donation program?</button>
+            <div class="panel">
+                <p>Yes! We welcome both donors and recipients. If you have laptops to donate or are a student in need of technology, please contact us for more information on how to participate in our program coordinated with Rotary Clubs and other partner organizations.</p>
+            </div>
+
+            <button class="accordion">What kind of entrepreneurship support does SOS.University offer?</button>
+            <div class="panel">
+                <p>We offer a range of support for aspiring entrepreneurs, including mentorship programs, specialized workshops on AI in business, and training sessions on leveraging technology for startups. Our goal is to equip you with the skills and knowledge needed to innovate and succeed in the AI-driven business landscape.</p>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <form id="contact-form">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
             </form>
         </section>
-    </main>
+    </div>
 
-    <footer class="bg-blue-600 text-white p-4 mt-12">
-        <div class="container mx-auto text-center">
-            <p>&copy; 2024 SOS.University. All rights reserved.</p>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 SOS.University - Empowering Through AI-Driven Education and Social Impact</p>
         </div>
     </footer>
+
+    <script>
+        // Accordion functionality
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function() {
+                this.classList.toggle("active");
+                var panel = this.nextElementSibling;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+
+        // Form submission handling
+        document.getElementById('contact-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+            alert('Thank you for your message. We will get back to you soon!');
+            this.reset();
+        });
+    </script>
 </body>
 </html>
